macOS: Fix low power fullscreen by fully closing the status bubble.

The status bubble was made invisible on Mac, instead of closed, because
showing it for a window on another space could result in a space switch.
Unfortunately, having a window above the fullscreen window prevents the
window server from entering low power/detached video playback mode.

I spent some time unsuccessfully investigating whether a child window
can be added without a space switch, and eventually fell back to this
solution: do close the bubble, and add a facility to defer adding child
windows until the parent is visible on the current space.

This has a mostly-intentional side effect of preventing space switches
in other cases, like a tab in another space presenting a permission
bubble.

Bug: 897819
Change-Id: I88ed9679d6c65a529d2d6378951a4f2f525266ef
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1768830
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#691184}

Former-commit-id: 13668c188b9065e992341a44e05f8d11e19689f3